--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Akaya+Kanadaka&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: 'ABeeZee', sans-serif;
+}
+
+h1, legend { 
+  font-family: 'Akaya Kanadaka', cursive;
+}
+
+.App {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.todo-form {
+  min-width: 300px;
+  width: 75%;
+}
+
+.todo-form__fieldset {
+  background-color: rgb(184, 245, 184);
+  border-radius: 5px;
+  border: forestgreen 2px solid
+}
+
+legend {
+  font-size: 20px;
+  border-radius: 5px;
+  border: forestgreen 2px solid;
+  background-color: white;
+}
+
+#desc-input {
+  width: 100%;
+}
+
+#form-submit {
+  color: white;
+  background-color: darkgreen;
+  border: black solid 1px;
+  border-radius: 2px;
+  font-size: 18px;
+  float: right;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  min-width: 300px;
+  width: 75%;
+}
+
+.todo-card {
+  background-color: lightgoldenrodyellow;
+  margin: 10px 0px;
+  padding: 10px;
+  border-radius: 5px;
+  border: darkgoldenrod 2px solid
+}
+
+.todo-title {
+  text-transform: capitalize;
+  margin-top: 0px;
+}
+
+.todo-card--done {
+  background-color: rgb(228, 228, 228);
+  border: gray 2px solid;
+  order: 1;
+  text-decoration: line-through;
+}
+
+.delete-todo {
+  background-color: rgb(143, 26, 26);
+  color: white;
+  border: black solid 1px;
+  border-radius: 2px;
+  font-size: 18px;
+  float: right;
 }
